	implemented nested classes _at all_; lack of support is not
	limited to non-cyclic ones.
	(charinfo::contains): `#if 0`-disable code that searches
	`nested_classes` member variable for matching `charinfo`
	objects.

	Fixes <https://savannah.gnu.org/bugs/?67770>.  Continues commit
	d330127900, 6 December.

2025-12-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Size the buffer
	housing the node description more scrupulously, avoiding
	potential string truncation.

	Fixes problem introduced by me in commit 1fb72c15e6, 3 December.

2025-12-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/xtotroff/xtotroff.c (main): Fix thinko in fprintf(3)
	call; that's not one of groff's diagnostic functions, so we must
	use `%s` in its format string, not `%1`.

	Fixes problem introduced by me in commit 4b7a0fe5ab, 6 December.

2025-12-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	Recognize materials licensed under LGPLv3.

	* LGPLv3: New file, retrieved from gnu.org on this date.
	* LICENSES: Discuss materials distributed under LGPLv3.  State
	where to find texts of FDL and LGPLv3 licenses.  (It's not a big
	mystery.)
	* MANIFEST: Document presence of "LGPLv3" file.
	* Makefile.am (EXTRA_DIST): Ship "LGPLv3" file.
	* src/include/relocate.h:
	* src/libs/libgroff/relocate.cpp: Cosmetically reindent and
	reflow copyright and license notices.  Reflect renaming of LGPL
	from "Library" to "Lesser" General Public License.

2025-12-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	Retire our hypot(3) replacement in favor of gnulib's.  Werner
	Lemberg borrowed ours from glibc in 2005 to work around a
	problem with its Interix implementation.  Interix has been dead
	a long time.  We still want a replacement, though, as gnulib
	documents hypot(3) as broken on mingw and MSVC 2014.  We
	certainly wish to keep working on the former.

	* bootstrap.conf: Add "hypot" to "gnulib_modules".